# bnri-cosmic

./: CONTRIBUTING.md  CROSS_IMPL_NOTES.md  Cargo.toml  README.md  SECURITY.md
docs/: AUDIT.md
src/: agent.rs  hex_renderer.rs  lib.rs  main.rs  quote.rs  views.rs  wallet.rs
tests/: hex_fixtures.rs  hexrect_codec.rs  sidecar_ipc.rs
tests/fixtures/: hex_vectors.json  hexrect_golden.json
