[package]
name = "bnri-cosmic"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "BNRi inscription explorer + bLOVErAi interface — COSMIC desktop app"
authors = ["Beehive Nature Reserve"]

# [lib] + thin [[bin]] (G-0). The library carries everything testable; the
# binary owns only the COSMIC view layer, so `cargo test` never needs a GUI.
[lib]
name = "bnri_cosmic"
path = "src/lib.rs"

[[bin]]
name = "bnri-cosmic"
path = "src/main.rs"
# The binary is the only thing that needs the GUI toolkit. Gating it here lets
# the library and its tests build on a host that cannot compile libcosmic.
required-features = ["gui"]

[dependencies]
# COSMIC GUI framework (Rust, by System76/mmstick/Michael Murphy).
# Optional and binary-only, behind the `gui` feature: the lib and every test
# build without it. `default` still enables it, so the default build is
# unchanged — this only makes a GUI-less test run expressible.
# Pinned to a commit, not a branch (R5 §4-B). This is not a new choice: it is
# the revision Cargo.lock already resolved and committed — the `rev` only makes
# the manifest say what the lock says, so `cargo update` cannot move it
# silently. The floating branch is how the accesskit cosmic-0.14 breakage
# arrived, which is the concrete reason §4-B asks for a SHA.
libcosmic = { git = "https://github.com/pop-os/libcosmic", rev = "511384f6206527cf87369da67a9164831afbabef", features = [
    "tokio",
], optional = true }

# No kernel dependency. The b-balance seam is a Unix socket (wire protocol,
# not linkage) — zero kernel types are referenced. The former
# `beehive-nature = { path = ... }` was a phantom: the kernel root is a virtual
# manifest with no package of that name, so it could never have resolved.

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image rendering (hex pixel art → canvas)
image = "0.25"

# EVM interaction (exSat RPC). Optional, behind the `evm` feature, default-off.
#
# Not a style call. `ethers 2.0.14` pins `jsonwebtoken 8.3.0` -> `ring 0.16.20`
# and `reqwest 0.11.27` -> `rustls 0.21.12` -> `rustls-webpki 0.101.7`, which
# carry RUSTSEC-2025-0009, -2026-0098, -2026-0099 and -2026-0104. Those are
# major-version pins: `cargo update` cannot move them, so the advisories cannot
# be cleared while this crate is in the default tree.
#
# The gating stands on "vulnerable + unused", NOT on "ethers is sunset" — that
# premise is UNVERIFIED and is not load-bearing here. Today the entire tree is
# pulled in by `wallet.rs`, which is 8 TODOs and four never-read fields (the
# C-3 dispatch, R5 §0.7). Vulnerable code imported by a stub that is not wired.
# ethers-vs-alloy stays open and belongs to C-3, where real signing will supply
# the evidence to settle it.
ethers = { version = "2", features = ["rustls"], optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
# STANDING ORDER (R6): `cargo audit` runs against the default feature set, and
# no vulnerable dependency may sit in default. A feature that pulls a known-vuln
# crate ships default-off until the code that needs it is real and the advisory
# is cleared. This is the dependency analogue of "an unfinished stub should look
# unfinished to the toolchain" — an unused vulnerability should not be in the
# shipped surface at all.
#
# So `default` is empty: the library and its tests, nothing else. This IS a
# change — `cargo build` no longer builds the GUI binary without `--features gui`
# — and it is the point, not a side effect. Both non-default features carry
# advisories today:
#   gui -> libcosmic -> quick-xml 0.39.4  (RUSTSEC-2026-0194/-0195, 7.5 high)
#   evm -> ethers 2.0.14 -> ring, rustls-webpki (4 advisories; see [dependencies])
# Deferred, not dismissed: both are recorded in the audit doc and owned — `gui`
# by whoever first builds the GUI on Linux, `evm` by C-3.
default = []
# The COSMIC view layer (src/main.rs). Off -> lib + tests only, no GUI toolkit.
gui = ["dep:libcosmic", "wgpu"]
wgpu = ["libcosmic?/wgpu"]
# The exSat EVM client. Off -> `wallet` is not compiled. C-3 turns this on when
# it wires real signing, and answers ethers-vs-alloy at the same time.
evm = ["dep:ethers"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
